# kvanta

./: CMakeLists.txt  README.md  vcpkg.json
benchmarks/: bench_get_set.cpp
docs/adr/: 001-rcu-over-rwmutex.md
src/: main.cpp
src/eviction/: lru_tracker.h
src/expiry/: expiry_manager.cpp
src/protocol/: resp_parser.cpp  resp_parser.h  resp_writer.cpp  resp_writer.h
src/server/: tcp_server.cpp  tcp_server.h  thread_pool.h
src/storage/: hash_store.cpp  list_store.cpp  rcu_store.h  string_store.cpp
src/wal/: wal_recovery.cpp  write_ahead_log.cpp  write_ahead_log.h
tests/: test_rcu_store.cpp
